fix: change break-word to word-wrap (seems better)

--- a/src/AppBundle/Resources/public/styles/main.css
+++ b/src/AppBundle/Resources/public/styles/main.css
@@ -44,7 +44,9 @@ body {
     font-weight: bold;
     text-shadow: 1px 2px 1px #000000;
     filter: dropshadow(color=#000000, offx=1, offy=2);
-    word-break: break-all;
+
+    overflow-wrap: break-word;
+    word-wrap: break-word;
 }
 
 .insult a {
